Plugin 'Right Bar': Fix overflow of right bar

--- a/www/plugins/right_bar/style.css
+++ b/www/plugins/right_bar/style.css
@@ -6,6 +6,7 @@
   width: 152px;
   border-left: 1px solid black;
   text-align: center;
+  overflow: hidden;
 }
 #right_bar XXXiframe {
   height: 640px;
